# flex_shu

./: README.md
flex_core/: CMakeLists.txt  package.xml
flex_core/include/flex_core/: FlexCore.hpp  MFAC.hpp  RemoteControlParser.hpp
flex_core/launch/: driver_control.launch.py
flex_core/node/: FlexCoreNode.cpp  RemoteCoreNode.cpp
flex_core/params/: MFAC_param.yaml  StepMotor_1_param.yaml  StepMotor_2_param.yaml  StepMotor_3_param.yaml  StepMotor_4_param.yaml
flex_core/scripts/: driver_control.py  pwm_test.py
flex_core/src/: FlexCore.cpp  MFAC.cpp  RemoteControlParser.cpp
flex_core/test/: test_limit_switch.py  test_limit_switch_pin40.py
flex_msgs/: CMakeLists.txt  package.xml
flex_msgs/msg/: DriverCallback.msg  DriverControl.msg  RemoteControl.msg
flex_msgs/srv/: MotorControl.srv
